syntax = "proto3";

package jinfwhuang.dstoolkit.ds;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/jinfwhuang/ds-toolkit/proto/ds";

message DataBlob {
  repeated HiddenDataKey keys  = 1;

  uint64 dataLen = 10; // EncryptedData might be padded
  bytes iv = 12; // 16 bytes
  bytes encryptedDataHash = 11;  // To check data integrity

  // The data is encrypted by a single data_key.
  // The hidden key is encrypted by secrets that are only retrievable by corresponding pubkey-privkey pair owner.
  bytes encryptedData = 20;
}

message HiddenDataKey {
  bytes pubkey = 1;
  bytes ephemeralPubkey = 2;

  // SharedSecret = privkey * ephemeral_privkey * Generator = privkey * ephemeralPubkey
  // encryptedKey = AES_ENCRYPT(key=sha256(SharedSecret)[:128], iv=iv, data=data_key)
  bytes encryptedHiddenKey = 10; // AES_128 encryption
  bytes iv = 11; // 16 bytes
}

